--- a/src/index.html
+++ b/src/index.html
@@ -64,31 +64,33 @@
     </div>
   </div>
 
+  <aside class="sidebar">
+    <h2>Best Sellers</h2>
+        <ul>
+          <li>
+            <a>🍕 Margarita</a>
+          </li>
+          <li>
+            <a>🍕 Peperoni</a>
+          </li>
+          <li>
+            <a>🍕 Pizza with pineapple</a>
+          </li>
+          <li>
+            <a>🍕 Quattro formagi</a>
+          </li>
+          <li>
+            <a>🍕 Vegetarianna</a>
+          </li>
+        </ul>
+</aside>
+
 </main>
 
 
-    <aside class="sidebar">
-        <h2>Best Sellers</h2>
-            <ul>
-              <li>
-                <a>🍕 Margarita</a>
-              </li>
-              <li>
-                <a>🍕 Peperoni</a>
-              </li>
-              <li>
-                <a>🍕 Pizza with pineapple</a>
-              </li>
-              <li>
-                <a>🍕 Quattro formagi</a>
-              </li>
-              <li>
-                <a>🍕 Vegetarianna</a>
-              </li>
-            </ul>
-    </aside>
+    
 
-    <footer>
+    <footer class="footer">
       <a>Contact us</a>
     <a>Privacy policy</a>
     </footer>
